--- a/extension/popup/index.html
+++ b/extension/popup/index.html
@@ -2,16 +2,9 @@
 <head>
 </head>
 <body>
-    <div id="app">
-        <div>
-            Url:
-            <span v-text="url"></span>
-        </div>
-        <pre v-text="message"></pre>
-        <textarea v-model="message"></textarea>
-        <button>Send</button>
-    </div>
+    FFF
     <script src="../lib/vue.js"></script>
     <script src="./index.js"></script>
+    <iframe src="../sandbox/content.html" id="sandboxFrame">
 </body>
 </html>
