detect url in sandbox

--- a/extension/popup/index.html
+++ b/extension/popup/index.html
@@ -1,10 +1,11 @@
 <html>
 <head>
+    <meta charset="utf-8">
 </head>
 <body>
     FFF
     <script src="../lib/vue.js"></script>
     <script src="./index.js"></script>
-    <iframe src="../sandbox/content.html" id="sandboxFrame">
+    <iframe id="sandboxFrame">
 </body>
 </html>
