--- a/extension/sandbox/content.html
+++ b/extension/sandbox/content.html
@@ -1,8 +1,9 @@
 <html>
 <head>
+    <meta charset="utf-8">
 </head>
 <body>
-    TTT
+    <b>Отзывы о сайтах</b>
     <div id="app">
         <div>
             Url:
