--- a/extension/popup/index.html
+++ b/extension/popup/index.html
@@ -1,10 +1,17 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <style>
+        html, body, iframe {
+            width: 500px;
+            height: 500px;
+            border: 0;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 <body>
-    FFF
-    <script src="../lib/vue.js"></script>
     <script src="./index.js"></script>
     <iframe id="sandboxFrame">
 </body>
