--- a/extension/sandbox/index.html
+++ b/extension/sandbox/index.html
@@ -14,6 +14,6 @@
         <button>Send</button>
     </div>
     <script src="../lib/vue.js"></script>
-    <script src="./content.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
