--- a/extension/sandbox/index.html
+++ b/extension/sandbox/index.html
@@ -1,44 +1,58 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+    </style>
 </head>
 <body>
-    <b><span style="color: #f00;">бро</span>тзывы - отзывы для своих</b>
-    <div id="app">
-        <div style="position: relative;">
-            <input type="text" v-model="url" readonly style="width: 100%; color: #aaa; border: 0; " />
-            <textarea v-model="message" 
-             :readonly="reportSendingStage !== 0"
-             placeholder="Отзыв о странице..." 
-             style="width: 100%; height: 60px; resize: none; outline: 0;"
-             :style="{opacity: (reportSendingStage === 0 ? 1 : 0.5)}"></textarea>
-        </div>
-        <div v-if="reportSendingStage === 0" style="position: relative; height: 20px;">
-            <button @click="sendReport(1)" style="position: absolute; top: 0; left: 0; width: 8%; height: 20px;">1</button>
-            <button @click="sendReport(2)" style="position: absolute; top: 0; left: 8%; width:8%; height: 20px;">2</button>
-            <button @click="sendReport(3)" style="position: absolute; top: 0; left: 16%; width: 8%; height: 20px;">3</button>
-            <button @click="sendReport(4)" style="position: absolute; top: 0; left: 24%; width: 8%; height: 20px;">4</button>
-            <button @click="sendReport(5)" style="position: absolute; top: 0; left: 32%; width: 8%; height: 20px;">5</button>
-            <button @click="sendReport(null)" style="position: absolute; top: 0; left: 40%; width: 20%; height: 20px;" title="Нейтрально">?</button>
-            <button @click="sendReport(6)" style="position: absolute; top: 0; left: 60%; width: 8%; height: 20px;">6</button>
-            <button @click="sendReport(7)" style="position: absolute; top: 0; left: 68%; width: 8%; height: 20px;">7</button>
-            <button @click="sendReport(8)" style="position: absolute; top: 0; left: 76%; width: 8%; height: 20px;">8</button>
-            <button @click="sendReport(9)" style="position: absolute; top: 0; left: 84%; width: 8%; height: 20px;">9</button>
-            <button @click="sendReport(10)" style="position: absolute; top: 0; left: 92%; width: 8%; height: 20px;">10</button>
-        </div>
-        <div v-if="reportSendingStage === 1" style="position: relative; height: 20px; text-align: center;">
-            Отправка...
-        </div>
-        <div v-if="reportSendingStage === 2" style="position: relative; height: 20px; text-align: center; color: #aaa;">
-            Отправлено
-        </div>
-        <br /><br />
-        <div>
+    <div id="app" style="position: relative; height: 100%; padding-top: 50px; padding-bottom: 100px;">
+        <section style="height: 50px; position: absolute; top: 0; background: #faa; width: 100%;">
+            <b><span style="color: #f00;">бро</span>тзывы - отзывы для своих</b>
+        </section>
+        <section style="height: 100%; overflow-y: auto;">
             <template v-for="(report, index) in reportsWithMessages">
-                <hr v-if="index" style="height: 1px; background: #aaa; border: 0;" />
-                <pre v-text="report.message"></pre>
+                <div>
+                    <div style="display: flex; white-space: nowrap; align-items: baseline; padding-left: 20px;">
+                        <div v-text="report.author" style="font-size: 16px; width: 120px;"></div>
+                        <div v-text="report.date" style="font-size: 10px; width: 60px; color: #aaa;"></div>
+                        <div v-text="report.mark" :style="{color: report.markColor}" style="font-size: 12px; width: 30px; font-weight: bold;">+5</div>
+                    </div>
+                    <div v-text="report.message" style="background: #2FA6F8; display: inline-block; padding: 8px 20px 10px 20px; border-radius: 20px; color: #fff; font-size: 16px; margin: 5px 0;"></div>
+                </div>
             </template>
-        </div>
+        </section>
+        <section style="height: 100px; outline: 1px solid #f00; position: absolute; bottom: 0; width: 100%;">
+            <div style="position: relative;">
+                <input type="text" v-model="url" readonly style="width: 100%; color: #aaa; border: 0; " />
+                <textarea v-model="message" 
+                :readonly="reportSendingStage !== 0"
+                placeholder="Отзыв о странице..." 
+                style="width: 100%; height: 60px; resize: none; outline: 0;"
+                :style="{opacity: (reportSendingStage === 0 ? 1 : 0.5)}"></textarea>
+            </div>
+            <div v-if="reportSendingStage === 0" style="position: relative; height: 20px;">
+                <button @click="sendReport(1)" style="position: absolute; top: 0; left: 0; width: 8%; height: 20px;">1</button>
+                <button @click="sendReport(2)" style="position: absolute; top: 0; left: 8%; width:8%; height: 20px;">2</button>
+                <button @click="sendReport(3)" style="position: absolute; top: 0; left: 16%; width: 8%; height: 20px;">3</button>
+                <button @click="sendReport(4)" style="position: absolute; top: 0; left: 24%; width: 8%; height: 20px;">4</button>
+                <button @click="sendReport(5)" style="position: absolute; top: 0; left: 32%; width: 8%; height: 20px;">5</button>
+                <button @click="sendReport(null)" style="position: absolute; top: 0; left: 40%; width: 20%; height: 20px;" title="Нейтрально">?</button>
+                <button @click="sendReport(6)" style="position: absolute; top: 0; left: 60%; width: 8%; height: 20px;">6</button>
+                <button @click="sendReport(7)" style="position: absolute; top: 0; left: 68%; width: 8%; height: 20px;">7</button>
+                <button @click="sendReport(8)" style="position: absolute; top: 0; left: 76%; width: 8%; height: 20px;">8</button>
+                <button @click="sendReport(9)" style="position: absolute; top: 0; left: 84%; width: 8%; height: 20px;">9</button>
+                <button @click="sendReport(10)" style="position: absolute; top: 0; left: 92%; width: 8%; height: 20px;">10</button>
+            </div>
+            <div v-if="reportSendingStage === 1" style="position: relative; height: 20px; text-align: center;">
+                Отправка...
+            </div>
+            <div v-if="reportSendingStage === 2" style="position: relative; height: 20px; text-align: center; color: #aaa;">
+                Отправлено
+            </div>
+        </section>
     </div>
     <script src="../lib/vue.js"></script>
     <script src="./index.js"></script>
